# Zephyrium-Engine

./: .gitignore  README.md
Core/: build.zig  build.zig.zon  meson.build  zephyriumcore.c
Core/Instruments/: build.bat
Core/src/: main.zig
Instruments/Core/: build.bat  build.py  build.sh
Instruments/GitHub/: commit_and_push.bat  commit_and_push.py
Instruments/Modules/: remove_trash_files.bat
Modules/: Cargo.toml
Modules/ECS/: Cargo.toml
Modules/ECS/src/: lib.rs
Modules/Input/: Cargo.toml
Modules/Input/src/: lib.rs
Modules/Physics/: Cargo.toml
Modules/Physics/src/: lib.rs
Modules/Render/: Cargo.toml
Modules/Render/src/: lib.rs
Scripts/: something.lua
